@@ -2,6 +2,7 @@ package com.example.service;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -44,21 +45,38 @@ public class ProfessorService {
         if (dto.getIdsDisciplinas() != null && !dto.getIdsDisciplinas().isEmpty()) {
             List<Disciplina> disciplinas = disciplinaRepository.findAllById(dto.getIdsDisciplinas());
             pro.setDisciplinas(disciplinas);
+            pro = professorRepository.save(pro);
         }
 
         return pro;
     }
-
+    
+    //Exclui o professor pelo seu idProfessor
     @Transactional
-    public void excluirProfessor(int idProfessor) {
+    public void ExcluirProfessor(int idProfessor) {
+        Professor professor = professorRepository.findById(idProfessor)
+                .orElseThrow(() -> new RuntimeException("Professor não encontrado"));
+
+        // Remove vínculos com disciplinas primeiro
+        professor.getDisciplinas().clear();
+        professorRepository.save(professor);
+
+        // Exclui o Professor
         professorRepository.deleteById(idProfessor);
     }
 
-    public Professor getBymatriProfessor(String matriProfessor) {
+    //Busca o professor pela sua matricula
+    public Professor GetBymatriProfessor(String matriProfessor) {
         return professorRepository.findBymatriProfessor(matriProfessor);
     }
+    
+    //Busca o professor pela sua matricula
+    public Professor GetByidProfessor(int idProfessor) {
+        return professorRepository.findByIdProfessor(idProfessor);
+    }
 
-    public java.util.Optional<Professor> atualizar(int idProfessor, ProfessorDTO dto) {
+    //Atualiza o professor pelo seu idProfessor
+    public java.util.Optional<Professor> AtualizarProfessor(int idProfessor, ProfessorDTO dto) {
         return professorRepository.findById(idProfessor)
                 .map(pro -> {
                     pro.setNomeProfessor(dto.getNomeProfessor());
@@ -66,16 +84,18 @@ public class ProfessorService {
                     pro.setEmailProfessor(dto.getEmailProfessor());
                     pro.setSenhaProfessor(dto.getSenhaProfessor());
 
-                    //Atualizar disciplinas aqui também (se quiser)
+                    //Atualizar disciplinas 
                     List<Disciplina> disciplinas = dto.getIdsDisciplinas().stream()
                             .map(id -> disciplinaRepository.findById(id).orElse(null))
                             .filter(Objects::nonNull)
-                            .toList();
+                            .collect(Collectors.toList());
 
                     pro.setDisciplinas(disciplinas);
 
                     return professorRepository.save(pro);
                 });
     }
-
+    
 }
+
+
